# zorba-graphviz-module

./: CMakeLists.txt
cmake_modules/: FindGraphviz.cmake
src/: CMakeLists.txt  graphviz.xq
src/com/zorba-xquery/www/modules/image/: CMakeLists.txt
src/com/zorba-xquery/www/modules/image/graphviz.xq.src/: graphviz.cpp
src/graphviz.xq.src/: graphviz.h
